--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "spiketime",
+  "id": "spiketime",
+  "name": "SpikeTime",
   "version": "1.0.0",
   "description":
     "Online time tracking software for project teams and freelancers. Easy to use, available everywhere, securely stored.",
@@ -8,17 +9,8 @@
   "license": "MIT",
   "config": {
     "serviceURL": "https://{teamID}.spiketime.net/app/",
-    "serviceName": "SpikeTime",
     "message":
       "Online time tracking software for project teams and freelancers.",
-    "popup": [],
-    "hasNotificationSound": false,
-    "hasTeamID": true,
-    "customURL": false,
-    "hostedOnly": false,
-    "hasIndirectMessages": false,
-    "webviewOptions": {
-      "disablewebsecurity": ""
-    }
+    "hasTeamID": true
   }
 }
